--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     
     <!-- Default Player -->
     <audio id="default-player" class="player" controls>
-      <source src="http://15565.cloudrad.io:9330/live" type="audio/mpeg">
+      <source src="http://stream-151.zeno.fm:80/sowvppvyth6uv" type="audio/mpeg">
     </audio>
 
 <!-- Alternative Player -->
-<iframe id="alternative-player" class="player" style="display:none" src="https://cdn2.cloudrad.io/PulseRockRadio/live/p1-popup.html"></iframe>
+<iframe id="alternative-player" class="player" style="display:none" src="https://cdn2.cloudrad.io/pulserock/sowvppvyth6uv/p1-popup.html"></iframe>
 
 
     <!-- Switch Player Button -->
@@ -102,7 +102,7 @@
   </div>
 
   <!-- Scripts -->
-  <script language="javascript" type="text/javascript" src="https://cdn2.cloudrad.io/PulseRockRadio/live/streaminfo.js"></script>
+  <script language="javascript" type="text/javascript" src="https://cdn2.cloudrad.io/pulserock/sowvppvyth6uv/streaminfo.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       setTimeout(switchPlayer, 1000); // затримка в 1000 мс
