--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     
     <!-- Default Player -->
     <audio id="default-player" class="player" controls>
-      <source src="http://stream-151.zeno.fm:80/sowvppvyth6uv" type="audio/mpeg">
+      <source src="https://stream.zeno.fm/sowvppvyth6uv" type="audio/mpeg">
     </audio>
 
 <!-- Alternative Player -->
-<iframe id="alternative-player" class="player" style="display:none" src="https://cdn2.cloudrad.io/pulserock/sowvppvyth6uv/p1-popup.html"></iframe>
+<iframe id="alternative-player" class="player" style="display:none" src="https://zeno.fm/radio/pulserock/"></iframe>
 
 
     <!-- Switch Player Button -->
@@ -90,16 +90,7 @@
       <button class="buymeacoffee">НА КАВУ</button>
     </a>
     
-    <!-- Widgets -->
-    <div id="stream_info">
-      <p>Поточна пісня: <span id="stream_info_song">Завантаження...</span></p>
-      <p>Назва потоку: <span id="stream_info_title">Завантаження...</span></p>
-      <p>Бітрейт: <span id="stream_info_bitrate">Завантаження...</span></p>
-      <p>Максимальна кількість слухачів: <span id="stream_info_maxlisteners">Завантаження...</span></p>
-      <p>Статус джерела: <span id="stream_info_source">Завантаження...</span></p>
-      <p>Останні треки: <span id="stream_info_songhistory">Завантаження...</span></p>
-    </div>
-  </div>
+
 
   <!-- Scripts -->
   <script language="javascript" type="text/javascript" src="https://cdn2.cloudrad.io/pulserock/sowvppvyth6uv/streaminfo.js"></script>
