--- a/index.html
+++ b/index.html
@@ -77,16 +77,11 @@
     <audio id="default-player" class="player" controls>
       <source src="https://stream.zeno.fm/sowvppvyth6uv" type="audio/mpeg">
     </audio>
+    
 
-<!-- Alternative Player -->
-<iframe id="alternative-player" class="player" style="display:none" src="https://zeno.fm/radio/pulserock/"></iframe>
-
-
-    <!-- Switch Player Button -->
-    <button class="switch-button" onclick="switchPlayer()">Переключити плеєр</button>
 
     <!-- buymeacoffee -->
-    <a href="https://linktr.ee/Sergiy_Budniy" target="_blank">
+    <a href="https://tatkis.github.io/CryptoHub" target="_blank">
       <button class="buymeacoffee">НА КАВУ</button>
     </a>
     
