--- a/index.html
+++ b/index.html
@@ -73,10 +73,21 @@
     <!-- Animated Title -->
     <div class="title">PulseRock</div>
     
-    <!-- Default Player -->
-    <audio id="default-player" class="player" controls>
-      <source src="https://stream.zeno.fm/sowvppvyth6uv" type="audio/mpeg">
-    </audio>
+    <    <section id="player">
+        <h2>Прямий ефір</h2>
+        <audio controls>
+            <source src="https://stream.zeno.fm/sikg4vgnv2jvv" type="audio/mpeg">
+            Ваш браузер не підтримує аудіо елемент.
+        </audio>
+    </section>
+    <!-- Facebook button -->
+    <a href="https://www.facebook.com/wwavevictory" target="_blank">
+      <button class="facebook-button">Приєднатися до нас на Facebook</button>
+    </a>
+    <!-- buymeacoffee -->
+    <a href="https://tatkis.github.io/CryptoHub" target="_blank">
+      <button class="buymeacoffee">НА КАВУ</button>
+    </a>
     
 
 
