--- a/index.html
+++ b/index.html
@@ -76,21 +76,17 @@
     <    <section id="player">
         <h2>Прямий ефір</h2>
         <audio controls>
-            <source src="https://stream.zeno.fm/sikg4vgnv2jvv" type="audio/mpeg">
+            <source src="https://stream.zeno.fm/jw0ruwlvbt4uv" type="audio/mpeg">
             Ваш браузер не підтримує аудіо елемент.
         </audio>
     </section>
-    <!-- Facebook button -->
-    <a href="https://www.facebook.com/wwavevictory" target="_blank">
-      <button class="facebook-button">Приєднатися до нас на Facebook</button>
-    </a>
+
     <!-- buymeacoffee -->
     <a href="https://tatkis.github.io/CryptoHub" target="_blank">
       <button class="buymeacoffee">НА КАВУ</button>
     </a>
     
     
-
 
   <!-- Scripts -->
   <script language="javascript" type="text/javascript" src="https://cdn2.cloudrad.io/pulserock/sowvppvyth6uv/streaminfo.js"></script>
